# LibretroWebXR

./: .gitignore  CLAUDE.md  DEBUGGING.md  LICENSE  PROVENANCE.md  README.md  THIRD_PARTY_LICENSES.md  desktop.html  index.html  package-lock.json  package.json  vite.config.js
deploy/: coturn.conf.example  libretrowebxr-room.conf  libretrowebxr-room.service  libretrowebxr.conf  libretrowebxr2.conf  log-proxy.conf
docs/: AMIGA_CORE_BUILD.md  DOS_CORE_BUILD.md  EMUVR_RESEARCH.md  HANDOFF.md  HEADSET_LIGHTGUN_VALIDATION.md  LICENSING.md  LIGHTGUN_SUPPORT.md  MOUSE_SUPPORT.md  MULTIPLAYER.md  N64_CORE_BUILD.md  PROJECT_HISTORY.md  PS2_CORE_BUILD.md  PSX_CORE_BUILD.md  ROADMAP.md  ROOM_AND_COLLECTIONS.md  handoff-2026-06-14-rack-feedback.md
public/: .htaccess  headset-test.html
scripts/: .gitignore  amiga-bootblock.s  debug.js  deploy.example.ps1  dummy-player.mjs  fetch-cores.mjs  kill-dev.ps1  make-amiga-demo.mjs  make-atari-dodger.mjs  make-c64-demo.mjs  make-c64-snake.mjs  make-gb-snake.mjs  make-gba-paint.mjs  make-genesis-demo.mjs  make-n64-scene.mjs  make-n64-smoke.mjs  make-nes-bomberman.mjs  make-nes-gallery.mjs  make-nes-opwolf.mjs  make-nes-pong.mjs  make-nes-zapper-test.mjs  make-pce-pong.mjs  make-ps2-guncon-range.mjs  make-sms-arcade.mjs  make-snes-demo.mjs  make-snes-opwolf.mjs  make-snes-scope.mjs  make-vb-demo.mjs  make-vic20-demo.mjs  measure-n64-fps.js  probe-autopause.mjs  probe-feedback.mjs  (+53 more)
scripts/cores/n64-jit-spike/: CMakeLists.txt  test_vr4300_jit.cpp  vr4300_jit_bridge.cpp  vr4300_jit_bridge.h  vr4300_play_backend.cpp  vr4300_play_backend.h
(+228 files in other folders)
